<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2019 Daniel Gultsch
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>
    <string name="app_name" translatable="false">Ltt.rs</string>
    <string name="archive">Archive</string>
    <string name="mark_unread">Mark as unread</string>
    <string name="mark_read">Mark as read</string>
    <string name="delete">Delete</string>
    <string name="mark_important">Mark as important</string>
    <string name="add_flag">Add flag</string>
    <string name="remove_flag">Remove flag</string>
    <string name="search">Search</string>
    <string name="to_x">to %s</string>
    <string name="move_to_inbox">Move to inbox</string>
    <plurals name="n_moved_to_inbox">
        <item quantity="one">%d moved to inbox</item>
        <item quantity="other">%d moved to inbox</item>
    </plurals>
    <string name="remove_label_x">Remove label %s</string>
    <string name="remove_label">Remove label</string>
    <string name="search_hint">Search in e-mail</string>
    <string name="mark_not_important">Mark as unimportant</string>
    <plurals name="n_removed_from_x">
        <item quantity="one">%d removed from %s</item>
        <item quantity="other">%d removed from %s</item>
    </plurals>
    <plurals name="n_archived">
        <item quantity="one">%d archived</item>
        <item quantity="other">%d archived</item>
    </plurals>
    <string name="undo">Undo</string>
    <plurals name="n_deleted">
        <item quantity="one">%d deleted</item>
        <item quantity="other">%d deleted</item>
    </plurals>
    <string name="deleted">Deleted</string>
    <string name="sign_in">Sign in</string>
    <string name="email_address">E-mail address</string>
    <string name="username_optional">Username (optional, defaults to email)</string>
    <string name="sign_in_instruction">with your e-mail account.</string>
    <string name="next">Next</string>
    <string name="enter_an_email_address">Type in an e-mail address</string>
    <string name="enter_a_valid_email_address">Type a valid e-mail address</string>
    <string name="welcome">Welcome</string>
    <string name="enter_your_password">Type in your password</string>
    <string name="enter_the_bearer_token">Type in the Bearer Token</string>
    <string name="enter_a_password">Type in a password</string>
    <string name="enter_a_bearer_token">Type in a Bearer Token</string>
    <string name="wrong_password">Wrong password. Try again.</string>
    <string name="wrong_bearer_token">Wrong Bearer Token. Try again.</string>
    <string name="found_no_supported_authentication_methods">Found no supported authentication methods</string>
    <string name="information_required">Info required</string>
    <string name="enter_your_connection_url">Type in your connection URL</string>
    <string name="enter_a_valid_url">Type in a valid connection URL</string>
    <string name="enter_a_secure_url">Type in a secure URL</string>
    <string name="endpoint_not_found">No e-mail service at this address</string>
    <string name="invalid_session_resource">There is no valid e-mail service at this address</string>
    <string name="unable_to_connect">Could not connect to e-mail service</string>
    <string name="timeout_reached">Trying to connect to e-mail service timed out</string>
    <string name="unable_to_establish_secure_connection">Could not establish a secure connection</string>
    <string name="unable_to_verify_service_identity">Could not verify identity</string>
    <string name="unknown_host">Could not resolve %s</string>
    <string name="no_network_connection">Connect to the Internet</string>
    <string name="unable_to_fetch_session">Could not fetch session: %s</string>
    <string name="compose">Compose</string>
    <string name="attach_file">Attach file</string>
    <string name="send">Send</string>
    <string name="discard">Discard</string>
    <string name="schedule_send">Schedule sending</string>
    <string name="compose_to">To</string>
    <string name="compose_compose_email">Compose e-mail</string>
    <string name="compose_subject">Subject</string>
    <string name="compose_from">From</string>
    <string name="ok">OK</string>
    <string name="add_at_least_one_recipient">Add a recipient.</string>
    <string name="the_address_x_is_invalid">Something is wrong with the address &lt;%s&gt;</string>
    <string name="select_sender">Select sender.</string>
    <string name="draft">Draft</string>
    <string name="compose_cc">Cc</string>
    <string name="could_not_store_account_credentials">Could not store account credentials</string>
    <string name="reassign_role">Reassign role</string>
    <string name="assign_role">Assign role</string>
    <string name="reassign_role_question">You already have a label called %1$s with the role of %2$s. Would you like to reassign it the role of %3$s?</string>
    <string name="assign_role_question">You already have a label called %1$s. Would you like to assign it the role of %2$s?</string>
    <string name="assign_role_detailed_explanation">Ltt.rs needs a label (mailbox) with the role of %1$s to work correctly. If you don’t want to use the label called %2$s for that purpose you can tap cancel and use your desktop or web client to create a different label with the role of %1$s.</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="change_labels">Change labels</string>
    <string name="label_as">Label as</string>
    <string name="apply_changes">Apply changes</string>
    <string name="enter_a_label_name">Type in a new label name</string>
    <string name="no_name_specified">No name specified. Try again.</string>
    <string name="reserved_mailbox_name">Pick a name that isn’t reserved.</string>
    <string name="new_label">New label</string>
    <string name="create">Create</string>
    <string name="manage_accounts">Manage accounts</string>
    <string name="add_another_account">Add another account</string>
    <string name="foreground_service_notification_text">Ltt.rs keeps running to notify about incoming e-mail</string>
    <string name="foreground_service">Foreground service</string>
    <string name="role_name_inbox">Inbox</string>
    <string name="role_name_sent">Sent</string>
    <string name="role_name_all">All e-mail</string>
    <string name="role_name_archive">Archive</string>
    <string name="role_name_drafts">Drafts</string>
    <string name="role_name_flagged">Starred</string>
    <string name="role_name_important">Important</string>
    <string name="role_name_trash">Trash</string>
    <string name="role_name_junk">Spam</string>
    <string name="role_name_subscribed">Subscribed</string>
    <string name="session_resource_help_dialog_title">What is a connection URL?</string>
    <string name="session_resource_help_dialog_message">Ltt.rs uses a relatively new JMAP protocol to sync e-mail, but your e-mail provider may not yet support it.
\n
\nContact your provider and ask about JMAP and the JMAP connection URL.
\n
\nOn a properly configured server Ltt.rs will auto-discover the connection URL.</string>
    <plurals name="x_new_emails">
        <item quantity="one">%d new e-mail</item>
        <item quantity="other">%d new e-mails</item>
    </plurals>
    <string name="notification_channel_name_email">E-mail</string>
    <string name="accounts">Accounts</string>
    <string name="account">Account</string>
    <string name="remove_account">Remove account</string>
    <string name="identities">Identities</string>
    <string name="manage_labels">Manage labels</string>
    <string name="vacation_response">Vacation response</string>
    <string name="end_to_end_encryption">End-to-end encryption</string>
    <string name="remove_account_dialog_title">Remove account?</string>
    <string name="remove_account_dialog_message">Removing this account deletes all its messages and other associated data from the device.</string>
    <string name="view_emails">View e-mails</string>
    <string name="attachments">Attachments</string>
    <string name="no_application_to_open_x">No app could show %s. Try downloading the attachment instead.</string>
    <string name="download_complete">Download complete</string>
    <string name="the_file_exceeds_the_limit_of_x">The file exceeds the limit of %s</string>
    <string name="could_not_cache_attachment">Could not cache attachment</string>
    <string name="upload_complete">Upload complete</string>
    <string name="attachment_is_not_cached">The attachment is not cached</string>
    <string name="combined_size_of_attachments_exceeds_the_limit_of_x">The combined size of all attachments exceeds the limit of %s</string>
    <string name="empty_trash">Empty trash</string>
    <string name="empty_trash_dialog_title">Empty trash?</string>
    <string name="empty">Empty</string>
    <string name="show_account_selector">Show account selector</string>
    <string name="hide_account_selector">Hide account selector</string>
    <string name="attachment_download_failed">Could not download attachment</string>
    <string name="email_not_cached">The e-mail containing this attachment is not cached.</string>
    <string name="attachment_download_failed_status_code_x">Could not download attachment. (HTTP status-code %d)</string>
    <string name="encryption_options">Encryption options</string>
    <string name="cleartext">Cleartext</string>
    <string name="encrypted">Encrypted</string>
    <string name="transfer_secret_key">Transfer secret key</string>
    <string name="autocrypt_enable_description">Enable support for end-to-end encryption. Your public key will be attached to outgoing emails. This allows your contacts to send you encrypted emails.</string>
    <string name="autocrypt_no_preference_description">On demand. You and your contacts will be able to explicitly enable encryption for individual emails.</string>
    <string name="autocrypt_mutual_description">You wish to receive encrypted emails. End-to-end encryption will be used by default for all contacts who also wish to receive encrypted emails.</string>
    <string name="autocrypt_encryption_preference">Encryption preference</string>
    <string name="could_not_configure_autocrypt">Could not configure Autocrypt</string>
    <string name="encryption_provider_can_not_create_secret_key">The encryption provider on this device is unable to create your secret key.</string>
    <string name="encryption_is_not_available_for_those_recipients">The option to send an encrypted e-mail is not available for those recipients.</string>
    <string name="send_as_cleartext">Send as cleartext</string>
    <string name="encrypted_email">(encrypted e-mail)</string>
    <string name="no_body">(no body)</string>
    <string name="no_subject">(no subject)</string>
    <string name="autocrypt_export_explained_hint_one">To transfer your secret key to another device Ltt.rs will create a Setup Message. It contains your secret key protected by a Setup Code.</string>
    <string name="autocrypt_export_explained_hint_two">The Setup Message is a regular e-mail labeled as Sent. Other apps will be able to pick it up from there and import your secret key.</string>
    <string name="autocrypt_export_explained_hint_three">In the next step Ltt.rs will create a secure Setup Code. You will have to write that code down and keep it in a secure place.</string>
    <string name="autocrypt_export_explained_hint_four">You’ll need to use this Setup Code on your other device to import your secret key. Keep this Setup Code in a secure place.</string>
    <string name="could_not_store_setup_message">Could not store Setup Message</string>
    <string name="done">Done</string>
    <string name="autocrypt_export_explained_hint_done">The Setup Message has been created. You can now start the import process on your other device.</string>
    <string name="view_email">View email</string>
    <string name="import_secret_key">Import secret key</string>
    <string name="skip">Skip</string>
    <string name="enter_your_setup_code">Type in the Setup Code to import your secret key or skip this step if you want Ltt.rs to generate a fresh secret key on this device.</string>
    <string name="wrong_setup_code">Wrong Setup Code. Try again!</string>
    <string name="import_private_key_help_dialog_title">Autocrypt Setup Message detected</string>
    <string name="import_private_key_help_dialog_message">Ltt.rs has detected an Autocrypt Setup Message created by one of the other apps you use. By importing the secret key from this message you can start using Autocrypt here in Ltt.rs too!\n\nPlease enter your Setup Code.\n\nIf you don’t remember your Setup Code you can skip this step and Ltt.rs will generate a fresh secret key on this device.</string>
    <string name="reply_all">Reply all</string>
    <string name="forward_email">Forward e-mail</string>
    <string name="more_options">More options</string>
    <string name="edit_draft">Edit draft</string>
    <string name="show_helper_dialog">Show helper dialog</string>
    <string name="download_attachment">Download attachment</string>
    <string name="remove_attachment">Remove attachment</string>
    <string name="reply">Reply</string>
    <string name="could_not_determine_metadata_of_attachment">Could not determine type, size and name of the attachment you are trying to add.</string>
    <string name="lttrs_lacks_permissions_to_add_attachment">Ltt.rs doesn’t have the necessary permissions to add this attachment.</string>
    <string name="decrypt_email">Decrypt e-mail</string>
    <string name="results_in_email">Results in e-mail</string>
    <string name="search_for_x_in_email">Search for \"%s\" in e-mail</string>
    <plurals name="x_emails_in_trash">
        <item quantity="one">There is currently %d e-mail in the trash.</item>
        <item quantity="other">There are currently %d e-mails in the trash.</item>
    </plurals>
    <plurals name="x_emails_will_permanently_deleted">
        <item quantity="one">%d e-mail will be permanently deleted.</item>
        <item quantity="other">%d e-mails will be permanently deleted.</item>
    </plurals>
    <plurals name="incorrect_secret_key">
        <item quantity="one">You do not have the correct secret key to decrypt %d e-email.</item>
        <item quantity="other">You do not have the correct secret key to decrypt %d e-emails.</item>
    </plurals>
    <plurals name="could_not_decrypt_x_emails">
        <item quantity="one">Could not decrypt %d e-mail</item>
        <item quantity="other">Could not decrypt %d e-mails</item>
    </plurals>
    <plurals name="could_not_download_x_encrypted_emails">
        <item quantity="one">Could not download %d encrypted e-mail</item>
        <item quantity="other">Could not download %d encrypted e-mails</item>
    </plurals>
</resources>