...
                    android:visibility="@{setupViewModel.isLoading() ? View.GONE : View.VISIBLE}" />

                <LinearLayout
                    android:id="@+id/instruction_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="32sp"
                    android:layout_below="@+id/header"
                    android:layout_marginTop="8sp"
                    android:layout_marginBottom="24sp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
...
                    android:layout_gravity="center_horizontal"
                    android:enabled="@{!setupViewModel.isLoading()}"
                    android:hint="@string/enter_your_connection_url"
                    app:errorText="@{setupViewModel.sessionResourceError}">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/url"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="flagNoExtractUi"
                        android:inputType="textUri"
                        android:maxLines="1"
                        android:text="@={setupViewModel.sessionResource}"
...
